everything is now running, going to go through and add the helper methods manually before trying to merge and get everything in one branch

--- a/requested_scripts/on_siu_2018_2023.ipynb
+++ b/requested_scripts/on_siu_2018_2023.ipynb
@@ -680,7 +680,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 37%|██████████████████████████▏                                            | 257/697 [01:02<02:00,  3.66it/s]"
+      " 37%|██████████████████████████▏                                            | 257/697 [01:00<02:11,  3.34it/s]"
      ]
     },
     {
@@ -694,7 +694,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 67%|███████████████████████████████████████████████▎                       | 464/697 [01:52<00:59,  3.91it/s]"
+      " 67%|███████████████████████████████████████████████▎                       | 464/697 [01:50<00:54,  4.24it/s]"
      ]
     },
     {
@@ -708,7 +708,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 67%|███████████████████████████████████████████████▋                       | 468/697 [01:53<00:52,  4.37it/s]"
+      " 74%|████████████████████████████████████████████████████▋                  | 517/697 [02:03<00:45,  3.93it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<title>Special Investigations Unit -- Director's Report Details, Case Number: 18-OCI-342</title>\n",
+      "Issue with finding Incident Narrative\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████| 697/697 [02:46<00:00,  4.17it/s]\n"
      ]
     }
    ],
@@ -741,17 +756,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "e3f8468c-d7b5-4f1a-908d-2fac1e8a4222",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Police Service</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Province</th>\n",
+       "      <th>Civilian Consequences</th>\n",
+       "      <th>Investigation Final Decision</th>\n",
+       "      <th>Link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Ontario Provincial Police</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>He was taken to hospital with a fractured back...</td>\n",
+       "      <td>As such there is no basis for proceeding with ...</td>\n",
+       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Kingston Police</td>\n",
+       "      <td>Kingston</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>The Complainant was transported to hospital in...</td>\n",
+       "      <td>In the result as there are no reasonable groun...</td>\n",
+       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>London Police Service</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>Following his arrest the Complainant was taken...</td>\n",
+       "      <td>In the result whether or not the Complainant’s...</td>\n",
+       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Peel Regional Police</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>His wife and son were fortunate to have escape...</td>\n",
+       "      <td>Be that as it may as there are no reasonable g...</td>\n",
+       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Niagara Regional Police Service</td>\n",
+       "      <td>Niagara</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>The Complainant was taken into custody and tra...</td>\n",
+       "      <td>4 As such there is no basis for proceeding wit...</td>\n",
+       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year                   Police Service      City Province  \\\n",
+       "0  2023        Ontario Provincial Police      None  Ontario   \n",
+       "1  2023                  Kingston Police  Kingston  Ontario   \n",
+       "2  2023            London Police Service    London  Ontario   \n",
+       "3  2023             Peel Regional Police      None  Ontario   \n",
+       "4  2023  Niagara Regional Police Service   Niagara  Ontario   \n",
+       "\n",
+       "                               Civilian Consequences  \\\n",
+       "0  He was taken to hospital with a fractured back...   \n",
+       "1  The Complainant was transported to hospital in...   \n",
+       "2  Following his arrest the Complainant was taken...   \n",
+       "3  His wife and son were fortunate to have escape...   \n",
+       "4  The Complainant was taken into custody and tra...   \n",
+       "\n",
+       "                        Investigation Final Decision  \\\n",
+       "0  As such there is no basis for proceeding with ...   \n",
+       "1  In the result as there are no reasonable groun...   \n",
+       "2  In the result whether or not the Complainant’s...   \n",
+       "3  Be that as it may as there are no reasonable g...   \n",
+       "4  4 As such there is no basis for proceeding wit...   \n",
+       "\n",
+       "                                                Link  \n",
+       "0  https://www.siu.on.ca/en/directors_report_deta...  \n",
+       "1  https://www.siu.on.ca/en/directors_report_deta...  \n",
+       "2  https://www.siu.on.ca/en/directors_report_deta...  \n",
+       "3  https://www.siu.on.ca/en/directors_report_deta...  \n",
+       "4  https://www.siu.on.ca/en/directors_report_deta...  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "9d48c903-6cf7-40e2-a2ed-478106d04a14",
    "metadata": {},
    "outputs": [],
