filtered cases so that they are between 2010 and 2020 inclusive

--- a/requested_scripts/on_siu_2005_2017.ipynb
+++ b/requested_scripts/on_siu_2005_2017.ipynb
@@ -741,7 +741,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████| 10/10 [00:02<00:00,  3.83it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████| 10/10 [00:02<00:00,  3.71it/s]\n"
      ]
     }
    ],
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "id": "e3f8468c-d7b5-4f1a-908d-2fac1e8a4222",
    "metadata": {},
    "outputs": [
@@ -816,16 +816,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2005</td>\n",
-       "      <td>Toronto Police Service</td>\n",
-       "      <td>Toronto</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>Lauzon had stabbed Affected Person 1 to death ...</td>\n",
-       "      <td>There are no reasonable grounds to believe tha...</td>\n",
-       "      <td>https://www.ontario.ca/page/siu-directors-repo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2015</td>\n",
        "      <td>Peterborough Police Service</td>\n",
@@ -836,42 +826,12 @@
        "      <td>https://www.ontario.ca/page/siu-directors-repo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>Ontario Provincial Police</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>On Monday May 10 2010 at 0707 hrs Notifying Of...</td>\n",
-       "      <td>In my view, there are no reasonable grounds to...</td>\n",
-       "      <td>https://www.ontario.ca/page/siu-directors-repo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>Brantford Police Service</td>\n",
-       "      <td>Brantford</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>Jones was pronounced dead at the scene</td>\n",
-       "      <td>In my view, there are no reasonable grounds to...</td>\n",
-       "      <td>https://www.ontario.ca/page/siu-directors-repo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2011</td>\n",
        "      <td>City of Kawartha Lakes Police Service</td>\n",
        "      <td>Armstrong</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>A post-mortem took place at the Coroner’s morg...</td>\n",
-       "      <td>In my view, there are no reasonable grounds to...</td>\n",
-       "      <td>https://www.ontario.ca/page/siu-directors-repo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2009</td>\n",
-       "      <td>Toronto Police Service</td>\n",
-       "      <td>Toronto</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>On Sunday December 27 2009 at 2000 hrs Notifyi...</td>\n",
        "      <td>In my view, there are no reasonable grounds to...</td>\n",
        "      <td>https://www.ontario.ca/page/siu-directors-repo...</td>\n",
        "    </tr>\n",
@@ -896,16 +856,6 @@
        "      <td>https://www.ontario.ca/page/siu-directors-repo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>Ottawa Police Service</td>\n",
-       "      <td>Ottawa</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>On January 18 2010 at 0915 hrs Notifying Offic...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>https://www.ontario.ca/page/siu-directors-repo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>2013</td>\n",
        "      <td>Toronto Police Service</td>\n",
@@ -921,66 +871,47 @@
       ],
       "text/plain": [
        "   Year                         Police Service          City Province  \\\n",
-       "0  2005                 Toronto Police Service       Toronto  Ontario   \n",
        "1  2015            Peterborough Police Service  Peterborough  Ontario   \n",
-       "2  2010              Ontario Provincial Police          None  Ontario   \n",
-       "3  2010               Brantford Police Service     Brantford  Ontario   \n",
        "4  2011  City of Kawartha Lakes Police Service     Armstrong  Ontario   \n",
-       "5  2009                 Toronto Police Service       Toronto  Ontario   \n",
        "6  2013              Ontario Provincial Police          None  Ontario   \n",
        "7  2015                 Toronto Police Service    St. Joseph  Ontario   \n",
-       "8  2010                  Ottawa Police Service        Ottawa  Ontario   \n",
        "9  2013                 Toronto Police Service       Toronto  Ontario   \n",
        "\n",
        "                               Civilian Consequences  \\\n",
-       "0  Lauzon had stabbed Affected Person 1 to death ...   \n",
        "1          Deceased was pronounced dead at the scene   \n",
-       "2  On Monday May 10 2010 at 0707 hrs Notifying Of...   \n",
-       "3             Jones was pronounced dead at the scene   \n",
        "4  A post-mortem took place at the Coroner’s morg...   \n",
-       "5  On Sunday December 27 2009 at 2000 hrs Notifyi...   \n",
        "6                              Parro’s firearm death   \n",
        "7  No preliminary cause of death was determined a...   \n",
-       "8  On January 18 2010 at 0915 hrs Notifying Offic...   \n",
        "9  On Sunday March 17 2013 at 2140 hrs Notifying ...   \n",
        "\n",
        "                        Investigation Final Decision  \\\n",
-       "0  There are no reasonable grounds to believe tha...   \n",
        "1  There are no reasonable grounds, in my view, t...   \n",
-       "2  In my view, there are no reasonable grounds to...   \n",
-       "3  In my view, there are no reasonable grounds to...   \n",
        "4  In my view, there are no reasonable grounds to...   \n",
-       "5  In my view, there are no reasonable grounds to...   \n",
        "6  The investigation by this Unit has been comple...   \n",
        "7                                               None   \n",
-       "8                                               None   \n",
        "9  In my view, there are no reasonable grounds to...   \n",
        "\n",
        "                                                Link  \n",
-       "0  https://www.ontario.ca/page/siu-directors-repo...  \n",
        "1  https://www.ontario.ca/page/siu-directors-repo...  \n",
-       "2  https://www.ontario.ca/page/siu-directors-repo...  \n",
-       "3  https://www.ontario.ca/page/siu-directors-repo...  \n",
        "4  https://www.ontario.ca/page/siu-directors-repo...  \n",
-       "5  https://www.ontario.ca/page/siu-directors-repo...  \n",
        "6  https://www.ontario.ca/page/siu-directors-repo...  \n",
        "7  https://www.ontario.ca/page/siu-directors-repo...  \n",
-       "8  https://www.ontario.ca/page/siu-directors-repo...  \n",
        "9  https://www.ontario.ca/page/siu-directors-repo...  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "results_df = results_df[(results_df.Year.astype(int) > 2009) & (results_df.Year.astype(int) < 2021)]\n",
     "results_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "9d48c903-6cf7-40e2-a2ed-478106d04a14",
    "metadata": {},
    "outputs": [],
