--- a/requested_scripts/on_siu_2018_2023.ipynb
+++ b/requested_scripts/on_siu_2018_2023.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "b9623815-3e7c-4644-83c8-59409f57722a",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "969eb26b-9714-4579-89f1-d29157555614",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f7182c9e-dee3-401e-993b-e4382e9d0ed0",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
        "'On July 28, 2022, at 1:08 p.m., the Toronto Police Service ('"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d1c1d99c-7d98-400d-9c38-226abcb0b191",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b9f1f23b-09c1-4e17-a067-e5382ef86c64",
    "metadata": {},
    "outputs": [],
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f0ff1637-8d2b-4d37-a215-b26a0e90678f",
    "metadata": {},
    "outputs": [],
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "0923444f-a8d9-4bef-9acd-7025a9a9f2d6",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "e9532f53-65ff-4bd7-92bd-72703d5d55f5",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "da4ec4f7-011e-43d1-af62-ee8e31a1a9c4",
    "metadata": {},
    "outputs": [],
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "58ccbfe8-052e-4def-981a-2c7ea86af903",
    "metadata": {},
    "outputs": [],
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "0bb23997-980e-4a7d-94cd-415dd4fbfaab",
    "metadata": {},
    "outputs": [],
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "8d560897-6f73-4913-88b5-5cdbb7717910",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "780a5c5e-46b7-44bc-a14a-54d361470b18",
    "metadata": {},
    "outputs": [],
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "7db78201-90c1-41ec-ae93-75da1f8a01f2",
    "metadata": {},
    "outputs": [],
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "0f37f94e-fbc6-49bd-91d5-c4ef886513bc",
    "metadata": {},
    "outputs": [],
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "2f9b10bf-4959-4f7e-a7e8-0105f626f192",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
        "'As such there is no basis for proceeding with criminal charges'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "d875c987-be8d-4698-8dea-b9bf10dbf9a2",
    "metadata": {},
    "outputs": [],
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "0285fe52-a442-4fac-96a8-8d35d32d2a63",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 37%|██████████████████████████▏                                            | 257/697 [01:00<02:11,  3.34it/s]"
+      " 37%|██████████████████████████▏                                            | 257/697 [01:02<02:01,  3.63it/s]"
      ]
     },
     {
@@ -700,7 +700,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 67%|███████████████████████████████████████████████▎                       | 464/697 [01:50<00:54,  4.24it/s]"
+      " 67%|███████████████████████████████████████████████▎                       | 464/697 [01:51<00:59,  3.92it/s]"
      ]
     },
     {
@@ -714,7 +714,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 74%|████████████████████████████████████████████████████▋                  | 517/697 [02:03<00:45,  3.93it/s]"
+      " 74%|████████████████████████████████████████████████████▋                  | 517/697 [02:03<00:34,  5.25it/s]"
      ]
     },
     {
@@ -729,7 +729,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████| 697/697 [02:46<00:00,  4.17it/s]\n"
+      " 92%|████████████████████████████████████████████████████████████████▉      | 638/697 [02:31<00:14,  4.20it/s]"
      ]
     }
    ],
@@ -762,137 +762,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "e3f8468c-d7b5-4f1a-908d-2fac1e8a4222",
+   "execution_count": null,
+   "id": "06b6a477-d55c-4fc7-8f4d-951205274463",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Police Service</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Province</th>\n",
-       "      <th>Civilian Consequences</th>\n",
-       "      <th>Investigation Final Decision</th>\n",
-       "      <th>Link</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>Ontario Provincial Police</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>He was taken to hospital with a fractured back...</td>\n",
-       "      <td>As such there is no basis for proceeding with ...</td>\n",
-       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>Kingston Police</td>\n",
-       "      <td>Kingston</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>The Complainant was transported to hospital in...</td>\n",
-       "      <td>In the result as there are no reasonable groun...</td>\n",
-       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>London Police Service</td>\n",
-       "      <td>London</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>Following his arrest the Complainant was taken...</td>\n",
-       "      <td>In the result whether or not the Complainant’s...</td>\n",
-       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>Peel Regional Police</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>His wife and son were fortunate to have escape...</td>\n",
-       "      <td>Be that as it may as there are no reasonable g...</td>\n",
-       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>Niagara Regional Police Service</td>\n",
-       "      <td>Niagara</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>The Complainant was taken into custody and tra...</td>\n",
-       "      <td>4 As such there is no basis for proceeding wit...</td>\n",
-       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Year                   Police Service      City Province  \\\n",
-       "0  2023        Ontario Provincial Police      None  Ontario   \n",
-       "1  2023                  Kingston Police  Kingston  Ontario   \n",
-       "2  2023            London Police Service    London  Ontario   \n",
-       "3  2023             Peel Regional Police      None  Ontario   \n",
-       "4  2023  Niagara Regional Police Service   Niagara  Ontario   \n",
-       "\n",
-       "                               Civilian Consequences  \\\n",
-       "0  He was taken to hospital with a fractured back...   \n",
-       "1  The Complainant was transported to hospital in...   \n",
-       "2  Following his arrest the Complainant was taken...   \n",
-       "3  His wife and son were fortunate to have escape...   \n",
-       "4  The Complainant was taken into custody and tra...   \n",
-       "\n",
-       "                        Investigation Final Decision  \\\n",
-       "0  As such there is no basis for proceeding with ...   \n",
-       "1  In the result as there are no reasonable groun...   \n",
-       "2  In the result whether or not the Complainant’s...   \n",
-       "3  Be that as it may as there are no reasonable g...   \n",
-       "4  4 As such there is no basis for proceeding wit...   \n",
-       "\n",
-       "                                                Link  \n",
-       "0  https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "1  https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "2  https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "3  https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "4  https://www.siu.on.ca/en/directors_report_deta...  "
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results_df.head()"
+    "results_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "id": "e3f8468c-d7b5-4f1a-908d-2fac1e8a4222",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_df.Year = pd.to_numeric(results_df.Year, errors='coerce').astype('Int64')\n",
+    "results_df = results_df[((results_df.Year > 2009) & (results_df.Year < 2021))]\n",
+    "results_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9d48c903-6cf7-40e2-a2ed-478106d04a14",
    "metadata": {},
    "outputs": [],
@@ -925,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
