--- a/requested_scripts/on_siu_2005_2017.ipynb
+++ b/requested_scripts/on_siu_2005_2017.ipynb
@@ -741,7 +741,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████| 10/10 [00:02<00:00,  3.71it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████| 10/10 [00:02<00:00,  3.67it/s]\n"
      ]
     }
    ],
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "id": "e3f8468c-d7b5-4f1a-908d-2fac1e8a4222",
    "metadata": {},
    "outputs": [
@@ -826,6 +826,26 @@
        "      <td>https://www.ontario.ca/page/siu-directors-repo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Ontario Provincial Police</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>On Monday May 10 2010 at 0707 hrs Notifying Of...</td>\n",
+       "      <td>In my view, there are no reasonable grounds to...</td>\n",
+       "      <td>https://www.ontario.ca/page/siu-directors-repo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Brantford Police Service</td>\n",
+       "      <td>Brantford</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>Jones was pronounced dead at the scene</td>\n",
+       "      <td>In my view, there are no reasonable grounds to...</td>\n",
+       "      <td>https://www.ontario.ca/page/siu-directors-repo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2011</td>\n",
        "      <td>City of Kawartha Lakes Police Service</td>\n",
@@ -856,6 +876,16 @@
        "      <td>https://www.ontario.ca/page/siu-directors-repo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Ottawa Police Service</td>\n",
+       "      <td>Ottawa</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>On January 18 2010 at 0915 hrs Notifying Offic...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.ontario.ca/page/siu-directors-repo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>2013</td>\n",
        "      <td>Toronto Police Service</td>\n",
@@ -872,34 +902,46 @@
       "text/plain": [
        "   Year                         Police Service          City Province  \\\n",
        "1  2015            Peterborough Police Service  Peterborough  Ontario   \n",
+       "2  2010              Ontario Provincial Police          None  Ontario   \n",
+       "3  2010               Brantford Police Service     Brantford  Ontario   \n",
        "4  2011  City of Kawartha Lakes Police Service     Armstrong  Ontario   \n",
        "6  2013              Ontario Provincial Police          None  Ontario   \n",
        "7  2015                 Toronto Police Service    St. Joseph  Ontario   \n",
+       "8  2010                  Ottawa Police Service        Ottawa  Ontario   \n",
        "9  2013                 Toronto Police Service       Toronto  Ontario   \n",
        "\n",
        "                               Civilian Consequences  \\\n",
        "1          Deceased was pronounced dead at the scene   \n",
+       "2  On Monday May 10 2010 at 0707 hrs Notifying Of...   \n",
+       "3             Jones was pronounced dead at the scene   \n",
        "4  A post-mortem took place at the Coroner’s morg...   \n",
        "6                              Parro’s firearm death   \n",
        "7  No preliminary cause of death was determined a...   \n",
+       "8  On January 18 2010 at 0915 hrs Notifying Offic...   \n",
        "9  On Sunday March 17 2013 at 2140 hrs Notifying ...   \n",
        "\n",
        "                        Investigation Final Decision  \\\n",
        "1  There are no reasonable grounds, in my view, t...   \n",
+       "2  In my view, there are no reasonable grounds to...   \n",
+       "3  In my view, there are no reasonable grounds to...   \n",
        "4  In my view, there are no reasonable grounds to...   \n",
        "6  The investigation by this Unit has been comple...   \n",
        "7                                               None   \n",
+       "8                                               None   \n",
        "9  In my view, there are no reasonable grounds to...   \n",
        "\n",
        "                                                Link  \n",
        "1  https://www.ontario.ca/page/siu-directors-repo...  \n",
+       "2  https://www.ontario.ca/page/siu-directors-repo...  \n",
+       "3  https://www.ontario.ca/page/siu-directors-repo...  \n",
        "4  https://www.ontario.ca/page/siu-directors-repo...  \n",
        "6  https://www.ontario.ca/page/siu-directors-repo...  \n",
        "7  https://www.ontario.ca/page/siu-directors-repo...  \n",
+       "8  https://www.ontario.ca/page/siu-directors-repo...  \n",
        "9  https://www.ontario.ca/page/siu-directors-repo...  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "id": "9d48c903-6cf7-40e2-a2ed-478106d04a14",
    "metadata": {},
    "outputs": [],
